Validação do form de login e página de registro

--- a/frontend-blog/src/app/pages/home/home.html
+++ b/frontend-blog/src/app/pages/home/home.html
@@ -11,6 +11,6 @@
       <p>Interaja com posts de outros usuários!</p>
       <p>Deixe fluir as suas ideias!</p>
     </div>
-    <button class="bg-amber-950 w-full text-white uppercase p-2 rounded-2xl cursor-pointer mt-10">Acessar</button>
+    <button (click)="irParaLogin()" class="bg-amber-950 w-full text-white uppercase p-2 rounded-2xl cursor-pointer mt-10">Acessar</button>
   </div>
 </div>
