--- a/frontend-blog/src/app/components/header/header.html
+++ b/frontend-blog/src/app/components/header/header.html
@@ -1,7 +1,7 @@
 <header class="w-full h-14 flex flex-row justify-around items-center pt-4 pl-6 pb-4 pr-6 bg-amber-200">
-  <img src="/logo.png" alt="logo" class="w-11 h-11">
+  <a routerLink="/home"><img src="/logo.png" alt="logo" class="w-11 h-11"></a>
   <nav class="flex gap-4 text-[1rem] font-semibold">
-    <a class="hover:text-gray-700" href="#">Login</a>
-    <a class="hover:text-gray-700" href="#">Registro</a>
+    <a routerLink="/login" class="hover:text-gray-700 cursor-pointer">Login</a>
+    <a routerLink="/register" class="hover:text-gray-700 cursor-pointer">Registro</a>
   </nav>
 </header>
