--- a/frontend-blog/src/app/pages/login/login.html
+++ b/frontend-blog/src/app/pages/login/login.html
@@ -1,23 +1,30 @@
 <app-header></app-header>
 
 <div class="flex justify-center items-center w-full h-[36rem]">
-  <div class="bg-amber-200 w-[620px] h-[440px] border-2 rounded-2xl border-amber-950 p-4 justify-center">
+  <div class="bg-amber-200 w-[620px] min-h-[440px] border-2 rounded-2xl border-amber-950 p-4 justify-center">
     <span class="text-amber-950 text-4xl flex justify-center uppercase mt-4">Login</span>
-    <form action="" class="flex flex-col p-6 text-[18px] w-full gap-2 justify-center mt-4">
+    <form [formGroup]="formulario" (ngSubmit)="acessar()" #formDir="ngForm" class="flex flex-col p-6 text-[18px] w-full gap-2 justify-center">
+
       <div class="flex flex-col gap-1">
         <label class="ml-1 text-[19px]" for="email">Email</label>
-        <input class="bg-white rounded-[10px] p-2 placeholder:text-amber-950 focus:border-amber-950" type="email" placeholder="Insira seu email" id="email" name="email">
+        <input autocomplete="off" class="bg-white rounded-[10px] p-2 placeholder:text-amber-950 focus:border-amber-950" type="email" placeholder="Insira seu email" id="email" name="email" formControlName="email">
+        @if (email?.invalid && formDir.submitted){
+          <div class="text-[15px] ml-2 text-red-600">
+            <p>Insira um e-mail válido</p>
+          </div>
+        }
       </div>
 
 
       <div class="flex flex-col gap-1">
         <label class="ml-1 text-[19px]" for="senha">Senha</label>
-        <input class="bg-white rounded-[10px] p-2 placeholder:text-amber-950" type="password" placeholder="Insira sua senha" id="senha" name="senha">
+        <input class="bg-white rounded-[10px] p-2 placeholder:text-amber-950" type="password" placeholder="Insira sua senha" id="senha" name="senha" required formControlName="senha">
         <a class="text-[15px] ml-3 text-amber-950 underline hover:text-amber-800 w-fit" href="#">Esqueceu sua senha?</a>
       </div>
 
-      <div class="text-[15px] flex flex-row gap-1 justify-end text-amber-950">Não tem uma conta? <a class="underline hover:text-amber-800" href="#">Faça seu registro!</a></div>
-      <input class=" bg-amber-950 rounded-2xl uppercase text-white p-2.5 mt-3" type="submit">
+      <div class="text-[15px] flex flex-row gap-1 justify-end text-amber-950">Não tem uma conta? <a routerLink="/register" class="underline hover:text-amber-800">Faça seu registro!</a></div>
+      <input  class=" bg-amber-950 hover:bg-amber-900 rounded-2xl uppercase text-white p-2.5 mt-3 cursor-pointer disabled:cursor-not-allowed" type="submit" value="Entrar">
+
     </form>
   </div>
 </div>
