Criação da página para criar post

--- a/frontend-blog/src/app/pages/home-usuario/home-usuario.html
+++ b/frontend-blog/src/app/pages/home-usuario/home-usuario.html
@@ -2,7 +2,7 @@
 <div class="w-full h-full p-8 flex justify-around gap-1">
   <div class="flex flex-col gap-4 max-w-[300px] w-full">
     <h3 class="text-2xl uppercase font-[350] mx-auto">Bem-vindo (usuario)</h3>
-    <button class="pt-2 pb-2 pl-3 pr-3 bg-amber-950 text-white rounded-[10px] uppercase w-full max-w-44 text-[13.5px] mx-auto cursor-pointer">Realizar um post</button>
+    <button (click)="abrirPaginaPost()" class="pt-2 pb-2 pl-3 pr-3 bg-amber-950 text-white rounded-[10px] uppercase w-full max-w-44 text-[13.5px] mx-auto cursor-pointer">Fazer um post</button>
     <div class="flex flex-col gap-2 mt-4">
 
       <label class="text-[18px] ml-1" for="procurarUsuario">Procurar usuários</label>
