--- a/frontend-blog/src/app/pages/post/criar-post/criar-post.html
+++ b/frontend-blog/src/app/pages/post/criar-post/criar-post.html
@@ -4,7 +4,7 @@
   <form class="flex flex-col gap-3 w-full max-w-[600px]" [formGroup]="formPost" (ngSubmit)="voltarHomeUsuario()" #formDir="ngForm">
     <div class="flex flex-col gap-1">
       <label for="titulo">Título do post</label>
-      <input name="titulo" formControlName="titulo" id="titulo" type="text" placeholder="Insira o título do post" class="border border-gray-400 rounded-[10px] p-2">
+      <input name="titulo" formControlName="titulo" id="titulo" type="text" placeholder="Insira o título do post." class="border border-gray-400 rounded-[10px] pl-3 p-2">
 
       @if (formPost.get("titulo")?.hasError && formDir.submitted) {
         <div class="text-[14px] text-red-600 ml-2">
@@ -15,7 +15,7 @@
     </div>
     <div class="flex flex-col w- gap-1">
       <label for="conteudo">Conteúdo</label>
-      <textarea name="conteudo" formControlName="conteudo" id="conteudo" placeholder="Insira seu texto" autosize class="border border-gray-400 rounded-[10px] py-2 px-4 resize-none min-h-[300px]"></textarea>
+      <textarea name="conteudo" formControlName="conteudo" id="conteudo" placeholder="Insira seu texto." autosize class="border border-gray-400 rounded-[10px] py-2 px-3 resize-none min-h-[300px]"></textarea>
       @if (formPost.get("conteudo")?.hasError && formDir.submitted) {
         <div class="text-[14px] text-red-600 ml-2">
           Conteúdo não pode estar vazio!
