--- a/frontend-blog/src/app/pages/post/ver-post/ver-post.html
+++ b/frontend-blog/src/app/pages/post/ver-post/ver-post.html
@@ -48,18 +48,31 @@
 
       <h2 class="mb-5 text-[23px] font-[480] ml-1">Comentários:</h2>
 
-      <div class="flex flex-col justify-center max-w-[70%] mx-16 max-sm:mx-0 max-sm:max-w-full">
-        <span class="flex flex-row max-sm:flex-col gap-x-2 items-center max-sm:items-start ml-1"><a class="rounded-[9px]" href="#"><i class="ph ph-user"></i> Nome do usuario</a></span>
-        <p class="ml-1 font-[350] mt-1 text-justify max-w-[95%]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis numquam ex tenetur quasi sequi quo reprehenderit eius accusantium id, tempore similique delectus fugiat! Ab laborum repellendus itaque praesentium esse tempore?</p>
+      <div class="comments">
+        <div class="flex flex-col justify-center max-w-[70%] mx-16 max-sm:mx-0 max-sm:max-w-full">
+          <span class="flex flex-row max-sm:flex-col gap-x-2 items-center max-sm:items-start ml-1"><a class="rounded-[9px]" href="#"><i class="ph ph-user"></i> Nome do usuario</a></span>
+          <p class="ml-1 font-[350] mt-1 text-justify max-w-[95%]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis numquam ex tenetur quasi sequi quo reprehenderit eius accusantium id, tempore similique delectus fugiat! Ab laborum repellendus itaque praesentium esse tempore?</p>
+        </div>
+        <hr class="my-5 max-w-[70%] mx-16 text-gray-300">
       </div>
 
-      <hr class="my-5 max-w-[70%] mx-16 text-gray-300">
 
-      <div class="flex flex-col justify-center max-w-[70%] mx-16 max-sm:mx-0 max-sm:max-w-full">
-        <span class="flex flex-row max-sm:flex-col gap-x-2 items-center max-sm:items-start ml-1"><a class="rounded-[9px]" href="#"><i class="ph ph-user"></i> Nome do usuario</a></span>
-        <p class="ml-1 font-[350] mt-1 text-justify max-w-[95%]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis numquam ex tenetur quasi sequi quo reprehenderit eius accusantium id, tempore similique delectus fugiat! Ab laborum repellendus itaque praesentium esse tempore?</p>
+      <div class="comments">
+        <div class="flex flex-col justify-center max-w-[70%] mx-16 max-sm:mx-0 max-sm:max-w-full">
+          <span class="flex flex-row max-sm:flex-col gap-x-2 items-center max-sm:items-start ml-1"><a class="rounded-[9px]" href="#"><i class="ph ph-user"></i> Nome do usuario</a></span>
+          <p class="ml-1 font-[350] mt-1 text-justify max-w-[95%]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis numquam ex tenetur quasi sequi quo reprehenderit eius accusantium id, tempore similique delectus fugiat! Ab laborum repellendus itaque praesentium esse tempore?</p>
+        </div>
+        <hr class="my-5 max-w-[70%] mx-16 text-gray-300">
       </div>
 
+
+      <div class="comments">
+        <div class="flex flex-col justify-center max-w-[70%] mx-16 max-sm:mx-0 max-sm:max-w-full">
+          <span class="flex flex-row max-sm:flex-col gap-x-2 items-center max-sm:items-start ml-1"><a class="rounded-[9px]" href="#"><i class="ph ph-user"></i> Nome do usuario</a></span>
+          <p class="ml-1 font-[350] mt-1 text-justify max-w-[95%]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis numquam ex tenetur quasi sequi quo reprehenderit eius accusantium id, tempore similique delectus fugiat! Ab laborum repellendus itaque praesentium esse tempore?</p>
+        </div>
+        <hr class="my-5 max-w-[70%] mx-16 text-gray-300">
+      </div>
     </div>
 
 
