Alterações nos forms, rotas e css

--- a/frontend-blog/src/app/pages/login/login.html
+++ b/frontend-blog/src/app/pages/login/login.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="text-[15px] flex flex-row gap-1 justify-end text-amber-950">Não tem uma conta? <a routerLink="/register" class="underline hover:text-amber-800">Faça seu registro!</a></div>
-      <input class="bg-amber-950 hover:bg-amber-900 rounded-2xl uppercase text-white p-2.5 mt-3 cursor-pointer disabled:cursor-not-allowed" type="submit" value="Entrar">
+      <input class="bg-amber-950 hover:opacity-90 rounded-2xl uppercase text-white p-2.5 mt-3 cursor-pointer disabled:cursor-not-allowed" type="submit" value="Entrar">
 
     </form>
   </div>
