--- a/frontend-blog/src/app/pages/post/criar-post/criar-post.html
+++ b/frontend-blog/src/app/pages/post/criar-post/criar-post.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class=" container mt-5 flex flex-col items-center justify-center gap-4 w-full p-4">
-  <h1 class="text-5xl uppercase">Criar post</h1>
+  <h1 class="text-5xl uppercase font-[500]">Criar post</h1>
   <form class="flex flex-col gap-3 w-full max-w-[600px]" [formGroup]="formPost" (ngSubmit)="voltarHomeUsuario()" #formDir="ngForm">
     <div class="flex flex-col gap-1">
       <label for="titulo">Título do post</label>
