--- a/frontend-blog/src/app/pages/home/home.html
+++ b/frontend-blog/src/app/pages/home/home.html
@@ -5,7 +5,7 @@
 <div class="w-full flex flex-row justify-evenly p-8 mt-5">
   <img src="/homem-sentado.png" alt="homem sentado" class="w-[250px] h-[350px]">
   <div class="flex flex-col gap-2 justify-center">
-    <h1 class="text-4xl uppercase tracking-[3px] text-amber-950">Tenha seu próprio blog!</h1>
+    <h1 class="text-4xl uppercase tracking-[3px] text-amber-950 font-[500]">Tenha seu próprio blog!</h1>
     <div class="text-[20px] flex flex-col items-center">
       <p>Tenha a sua liberdade criando posts incríveis!</p>
       <p>Interaja com posts de outros usuários!</p>
