--- a/frontend-blog/src/app/pages/login/login.html
+++ b/frontend-blog/src/app/pages/login/login.html
@@ -2,7 +2,7 @@
 
 <div class="flex justify-center items-center w-full h-[36rem]">
   <div class="bg-amber-200 w-[620px] min-h-[440px] border-2 rounded-2xl border-amber-950 p-4 justify-center">
-    <span class="text-amber-950 text-4xl flex justify-center uppercase mt-4">Login</span>
+    <span class="text-amber-950 text-4xl flex justify-center uppercase mt-4 font-[500]">Login</span>
     <form [formGroup]="formulario" (ngSubmit)="acessarHomeUsuario()" #formDir="ngForm" class="flex flex-col p-6 text-[18px] w-full gap-2 justify-center">
 
       <div class="flex flex-col gap-1">
