--- a/frontend-blog/src/app/pages/registro/registro.html
+++ b/frontend-blog/src/app/pages/registro/registro.html
@@ -2,7 +2,7 @@
 
 <div class="block justify-center items-center w-full mt-8">
   <div class="bg-amber-200 max-w-[40%] w-full border-2 rounded-2xl border-amber-950 p-4 justify-center mx-auto">
-    <h1 class="text-4xl flex justify-center uppercase text-amber-950">Registro</h1>
+    <h1 class="text-4xl flex justify-center uppercase text-amber-950 font-[500]">Registro</h1>
     <form [formGroup]="form"  class="flex flex-col p-4 gap-2 w-full" (ngSubmit)="submit()" #formDir="ngForm">
 
       <div class="flex flex-col gap-1">
